--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ISP-B55E3A1F-9FC6-4646-BEB2-3F046D55F6C3;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MyCS": "Server= localhost\\SQLEXPRESS01;Database=ishop;Trusted_Connection=True;User ID=; Password=;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
